@@ -1,3 +1,7 @@
+2003-06-02  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* geyes.[ch]: Center the geyes image on the panel.
+ 
 2003-06-02  Kevin Vandersloot
 
 	* geyes.c: expand for Fitt's law.
